--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
         "sensio/buzz-bundle": "^1.1"
     },
     "autoload": {
-        "psr-0": {
-            "YllyCertiSign": "src/"
+        "psr-4": {
+            "YllyCertiSign\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "5.7.x-dev"
     }
 }
