--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
             "email": "mickael@ylly.fr"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
         "php": ">=5.4",
-        "sensio/buzz-bundle": "^1.1"
+        "sensio/buzz-bundle": "^1.1",
+        "symfony/yaml": "~2.2|~3.0"
     },
     "autoload": {
         "psr-4": {
@@ -18,6 +18,6 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "5.7.x-dev"
+        "phpunit/phpunit": "^4.8"
     }
 }
