--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "require": {
         "php": ">=5.4",
+        "ext-gd": "*",
         "sensio/buzz-bundle": "^1.1",
         "symfony/yaml": "~2.2|~3.0"
     },
