--- a/tests/config.yml
+++ b/tests/config.yml
@@ -3,5 +3,4 @@ cert: /etc/ssl/certisign.pem
 cert_password: password
 api_key: 123456
 api_endpoint: https://www.ylly.fr
-sms_destination: '0601020304'
-#proxy: 1.1.1.1:1111
+proxy: null
