--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": ">=5.4",
         "ext-gd": "*",
+        "ext-curl": "*",
         "symfony/yaml": "~2.2|~3.0"
     },
     "autoload": {
