--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,17 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
+        "php": "^5.4 || ^7.0",
         "ext-gd": "*",
         "ext-curl": "*",
-        "symfony/yaml": "~2.2|~3.0"
+        "symfony/yaml": "^2.2 || ^3.0 || ^4.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.0 || ^5.0 || ^6.0"
     },
     "autoload": {
         "psr-4": {
             "YllyCertSign\\": "src/"
         }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^4.8"
     }
 }
