--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ php:
 before_script:
   - composer update --prefer-source --no-interaction --dev
 
-script: phpunit
+script: vendor/bin/phpunit
 
 matrix:
   fast_finish: true
