--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": ">=5.6",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-gd": "*",
-        "symfony/yaml": "^2.2 || ^3.0 || ^4.0"
+        "symfony/yaml": ">=2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.0 || ^5.0 || ^6.0"
+        "phpunit/phpunit": ">=4.0"
     },
     "autoload": {
         "psr-4": {
